stderr.log
(node:37623) UnhandledPromiseRejectionWarning: ReferenceError: token is not defined
    at Object.updateUser (/home/unitvjdm/beer.binsoft.online/beer-inventory/models/userModel.js:29:73)
    at Query.onResult (/home/unitvjdm/beer.binsoft.online/beer-inventory/controllers/userController.js:110:21)
(Use `node --trace-warnings ...` to show where the warning was created)
(node:37623) UnhandledPromiseRejectionWarning: Unhandled promise rejection. This error originated either by throwing inside of an async function without a catch block, or by rejecting a promise which was not handled with .catch(). To terminate the node process on unhandled promise rejection, use the CLI flag `--unhandled-rejections=strict` (see https://nodejs.org/api/cli.html#cli_unhandled_rejections_mode). (rejection id: 1)
(node:37623) [DEP0018] DeprecationWarning: Unhandled promise rejections are deprecated. In the future, promise rejections that are not handled will terminate the Node.js process with a non-zero exit code.
(node:37623) UnhandledPromiseRejectionWarning: ReferenceError: token is not defined
    at Object.updateUser (/home/unitvjdm/beer.binsoft.online/beer-inventory/models/userModel.js:29:73)
    at Query.onResult (/home/unitvjdm/beer.binsoft.online/beer-inventory/controllers/userController.js:110:21)
(node:37623) UnhandledPromiseRejectionWarning: Unhandled promise rejection. This error originated either by throwing inside of an async function without a catch block, or by rejecting a promise which was not handled with .catch(). To terminate the node process on unhandled promise rejection, use the CLI flag `--unhandled-rejections=strict` (see https://nodejs.org/api/cli.html#cli_unhandled_rejections_mode). (rejection id: 2)
(node:37623) UnhandledPromiseRejectionWarning: ReferenceError: token is not defined
    at Object.updateUser (/home/unitvjdm/beer.binsoft.online/beer-inventory/models/userModel.js:29:73)
    at Query.onResult (/home/unitvjdm/beer.binsoft.online/beer-inventory/controllers/userController.js:110:21)
(node:37623) UnhandledPromiseRejectionWarning: Unhandled promise rejection. This error originated either by throwing inside of an async function without a catch block, or by rejecting a promise which was not handled with .catch(). To terminate the node process on unhandled promise rejection, use the CLI flag `--unhandled-rejections=strict` (see https://nodejs.org/api/cli.html#cli_unhandled_rejections_mode). (rejection id: 3)
(node:92269) UnhandledPromiseRejectionWarning: ReferenceError: token is not defined
    at Object.updateUser (/home/unitvjdm/beer.binsoft.online/beer-inventory/models/userModel.js:29:73)
    at Query.onResult (/home/unitvjdm/beer.binsoft.online/beer-inventory/controllers/userController.js:110:21)
(Use `node --trace-warnings ...` to show where the warning was created)
(node:92269) UnhandledPromiseRejectionWarning: Unhandled promise rejection. This error originated either by throwing inside of an async function without a catch block, or by rejecting a promise which was not handled with .catch(). To terminate the node process on unhandled promise rejection, use the CLI flag `--unhandled-rejections=strict` (see https://nodejs.org/api/cli.html#cli_unhandled_rejections_mode). (rejection id: 1)
(node:92269) [DEP0018] DeprecationWarning: Unhandled promise rejections are deprecated. In the future, promise rejections that are not handled will terminate the Node.js process with a non-zero exit code.
(node:92269) UnhandledPromiseRejectionWarning: ReferenceError: token is not defined
    at Object.updateUser (/home/unitvjdm/beer.binsoft.online/beer-inventory/models/userModel.js:29:73)
    at Query.onResult (/home/unitvjdm/beer.binsoft.online/beer-inventory/controllers/userController.js:110:21)
(node:92269) UnhandledPromiseRejectionWarning: Unhandled promise rejection. This error originated either by throwing inside of an async function without a catch block, or by rejecting a promise which was not handled with .catch(). To terminate the node process on unhandled promise rejection, use the CLI flag `--unhandled-rejections=strict` (see https://nodejs.org/api/cli.html#cli_unhandled_rejections_mode). (rejection id: 2)
/home/unitvjdm/beer.binsoft.online/beer-inventory/utils.js:66
      subject: `Just Placed A New Beer Order!`,
      ^^^^^^^

SyntaxError: Unexpected identifier
    at wrapSafe (internal/modules/cjs/loader.js:1001:16)
    at Module._compile (internal/modules/cjs/loader.js:1049:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1114:10)
    at Module.load (internal/modules/cjs/loader.js:950:32)
    at Function.Module._load (internal/modules/cjs/loader.js:790:12)
    at Module.require (internal/modules/cjs/loader.js:974:19)
    at require (internal/modules/cjs/helpers.js:101:18)
    at Object.<anonymous> (/home/unitvjdm/beer.binsoft.online/beer-inventory/server.js:6:70)
    at Module._compile (internal/modules/cjs/loader.js:1085:14)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1114:10)
/home/unitvjdm/beer.binsoft.online/beer-inventory/utils.js:66
      subject: `Just Placed A New Beer Order!`,
      ^^^^^^^

SyntaxError: Unexpected identifier
    at wrapSafe (internal/modules/cjs/loader.js:1001:16)
    at Module._compile (internal/modules/cjs/loader.js:1049:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1114:10)
    at Module.load (internal/modules/cjs/loader.js:950:32)
    at Function.Module._load (internal/modules/cjs/loader.js:790:12)
    at Module.require (internal/modules/cjs/loader.js:974:19)
    at require (internal/modules/cjs/helpers.js:101:18)
    at Object.<anonymous> (/home/unitvjdm/beer.binsoft.online/beer-inventory/server.js:6:70)
    at Module._compile (internal/modules/cjs/loader.js:1085:14)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1114:10)
/home/unitvjdm/beer.binsoft.online/beer-inventory/utils.js:66
      subject: `Just Placed A New Beer Order!`,
      ^^^^^^^

SyntaxError: Unexpected identifier
    at wrapSafe (internal/modules/cjs/loader.js:1001:16)
    at Module._compile (internal/modules/cjs/loader.js:1049:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1114:10)
    at Module.load (internal/modules/cjs/loader.js:950:32)
    at Function.Module._load (internal/modules/cjs/loader.js:790:12)
    at Module.require (internal/modules/cjs/loader.js:974:19)
    at require (internal/modules/cjs/helpers.js:101:18)
    at Object.<anonymous> (/home/unitvjdm/beer.binsoft.online/beer-inventory/server.js:6:70)
    at Module._compile (internal/modules/cjs/loader.js:1085:14)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1114:10)
/home/unitvjdm/beer.binsoft.online/beer-inventory/utils.js:66
      subject: `Just Placed A New Beer Order!`,
      ^^^^^^^

SyntaxError: Unexpected identifier
    at wrapSafe (internal/modules/cjs/loader.js:1001:16)
    at Module._compile (internal/modules/cjs/loader.js:1049:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1114:10)
    at Module.load (internal/modules/cjs/loader.js:950:32)
    at Function.Module._load (internal/modules/cjs/loader.js:790:12)
    at Module.require (internal/modules/cjs/loader.js:974:19)
    at require (internal/modules/cjs/helpers.js:101:18)
    at Object.<anonymous> (/home/unitvjdm/beer.binsoft.online/beer-inventory/server.js:6:70)
    at Module._compile (internal/modules/cjs/loader.js:1085:14)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1114:10)
/home/unitvjdm/beer.binsoft.online/beer-inventory/utils.js:66
      subject: `Just Placed A New Beer Order!`,
      ^^^^^^^

SyntaxError: Unexpected identifier
    at wrapSafe (internal/modules/cjs/loader.js:1001:16)
    at Module._compile (internal/modules/cjs/loader.js:1049:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1114:10)
    at Module.load (internal/modules/cjs/loader.js:950:32)
    at Function.Module._load (internal/modules/cjs/loader.js:790:12)
    at Module.require (internal/modules/cjs/loader.js:974:19)
    at require (internal/modules/cjs/helpers.js:101:18)
    at Object.<anonymous> (/home/unitvjdm/beer.binsoft.online/beer-inventory/server.js:6:70)
    at Module._compile (internal/modules/cjs/loader.js:1085:14)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1114:10)
/home/unitvjdm/beer.binsoft.online/beer-inventory/utils.js:66
      subject: `Just Placed A New Beer Order!`,
      ^^^^^^^

SyntaxError: Unexpected identifier
    at wrapSafe (internal/modules/cjs/loader.js:1001:16)
    at Module._compile (internal/modules/cjs/loader.js:1049:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1114:10)
    at Module.load (internal/modules/cjs/loader.js:950:32)
    at Function.Module._load (internal/modules/cjs/loader.js:790:12)
    at Module.require (internal/modules/cjs/loader.js:974:19)
    at require (internal/modules/cjs/helpers.js:101:18)
    at Object.<anonymous> (/home/unitvjdm/beer.binsoft.online/beer-inventory/server.js:6:70)
    at Module._compile (internal/modules/cjs/loader.js:1085:14)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1114:10)
